added collor logs for server startup and fixed image upload headers
