# user/src/routes/image-upload.ts
@@ -10,9 +10,9 @@ import { fileManager } from "../utils/file-manager";
 const router = Router();
 
 router.get("/", requireAuth, async (req, res) => {
-  if (!req.headers["content-type"])
-    throw new BadRequestError("Content-Type must be set!");
-  if (req.headers["content-type"]?.indexOf("image/") === -1)
+  if (!req.headers["x-content-type"])
+    throw new BadRequestError("X-Content-Type must be set!");
+  if (req.headers["x-content-type"]?.indexOf("image/") === -1)
     throw new BadRequestError("Content-Type must be an image type");
 
   if (!(await User.exists({ _id: req.user?.id })))
@@ -20,7 +20,7 @@ router.get("/", requireAuth, async (req, res) => {
 
   const data = await fileManager.generateUploadURL(
     req.user!.id,
-    req.headers["content-type"]
+    req.headers["x-content-type"] as string
   );
 
   res.json(data);
